PresentationTier/PresentationTier-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: presentation-tier-deployment
  labels:
    app: presentation-tier
spec:
  replicas: 1
  selector:
    matchLabels:
      app: presentation-tier
  template:
    metadata:
      labels:
        app: presentation-tier
    spec:
      containers:
      - name: presentation-tier
        image: kozraf/tellmejoke-presentationtier:1.2.2
        imagePullPolicy: Always
        ports:
        - containerPort: 80
