PresentationTier/PresentationTier-ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tellmejoke-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: tellmejoke.local # This can be any domain you wish. For local testing, you can adjust your hosts file.
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: presentation-tier-service # The name of your frontend service
            port:
              number: 80
